clusters/titania/apps/wallabag/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  labels:
    app.kubernetes.io/name: wallabag
    app.kubernetes.io/instance: wallabag
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: wallabag
      app.kubernetes.io/instance: wallabag
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wallabag
        app.kubernetes.io/instance: wallabag
      annotations:
        secret.reloader.stakater.com/reload: wallabag-config-vault
    spec:
      containers:
        - name: wallabag
          image: wallabag/wallabag:2.6.14
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          volumeMounts:
            - name: images
              mountPath: /var/www/wallabag/web/assets/images
      volumes:
        - name: images
          persistentVolumeClaim:
            claimName: wallabag-images
