clusters/titania/apps/wallabag/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallabag
  labels:
    app.kubernetes.io/name: wallabag
    app.kubernetes.io/instance: wallabag
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wallabag
    app.kubernetes.io/instance: wallabag
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
